--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
         <a href="#" target="_blank">Resumé</a>  <a href="https://tr.linkedin.com/pub/%C3%B6zg%C3%BCn-gen%C3%A7/6/b5/507" target="_blank"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png" width="160" height="33" border="0" alt="View Özgün Genç's profile on LinkedIn"></a>
         <a href="reactvr" target="_blank">VR Demo</a>
       </div>
-      <script async src="https://static.medium.com/embed.js"></script><a class="m-profile" href="https://medium.com/@ozgungenc">Özgün Genç</a>
+      <script async src="https://static.medium.com/embed.js"></script>
+      <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-71527622-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+      <a class="m-profile" href="https://medium.com/@ozgungenc">Özgün Genç</a>
+
     </center>
 
 
