--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <center>
       <div id="name">ÖZGÜN GENÇ</div>
       <div class="links">
-        <a href="#" target="_blank">Resumé</a>  <a href="https://tr.linkedin.com/pub/%C3%B6zg%C3%BCn-gen%C3%A7/6/b5/507" target="_blank"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png" width="160" height="33" border="0" alt="View Özgün Genç's profile on LinkedIn"></a>
-        <a href="reactvr" target="_blank">VR Demo</a>
+        <a href="https://drive.google.com/open?id=0B1pqmr9kbQEBVVZoZ0VjajJpaGs" target="_blank">Resumé</a>  <a href="https://tr.linkedin.com/pub/%C3%B6zg%C3%BCn-gen%C3%A7/6/b5/507" target="_blank"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png" width="160" height="33" border="0" alt="View Özgün Genç's profile on LinkedIn"></a>
+        <a href="reactvr" target="_blank">VR Resumé</a>
       </div>
       <script async src="https://static.medium.com/embed.js"></script>
       <script>
